# Reflect

./: .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  Reflect.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  reflect_test.vcxproj  reflect_test.vcxproj.filters
examples/: CMakeLists.txt
examples/1_basic_class_exposure/: CMakeLists.txt  entity.cpp  entity.hpp  main.cpp
examples/2_serialization/: CMakeLists.txt  main.cpp  serialization.hpp
include/reflect/: enum_property.hpp  enum_property.inl  meta_class.hpp  meta_class.inl  property.hpp  property.inl  reflect.hpp
include/reflect/detail/: meta_exception.hpp  metadata.hpp  template_helpers.hpp  template_helpers.inl
tests/: test_main.cpp  test_object.hpp
